# minify-html-fallback

./: CHANGELOG.md  Cargo.toml  README.md  version
.github/workflows/: python.yml
bench/runners/minify-html/: Cargo.toml
bench/runners/minify-html-onepass/: Cargo.toml
debug/diff/c14n/: Cargo.toml
minhtml/: Cargo.toml
minify-html/: Cargo.toml
minify-html-fallback/: Cargo.toml
minify-html-onepass/: Cargo.toml
minify-html-onepass-fallback/: Cargo.toml
minify-html-onepass-python/: Cargo.toml
minify-html-onepass-python/src/: lib.rs
minify-html-python/: Cargo.toml
minify-html-python/src/: lib.rs
