[workspace]
members = [
  "bench/runners/minify-html-onepass",
  "bench/runners/minify-html",
  "debug/diff/c14n",
  "debug/diff/charlines",
  "minhtml",
  "minify-html-common",
  "minify-html-onepass-python",
  "minify-html-onepass-fallback",
  "minify-html-python",
  "minify-html-fallback",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
